--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,20 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    
     <title>Konglig Fysiks Sångbok</title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#ff6600">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+
+    <meta name="keywords" content="Teknisk Fysik, Sångbok, Fysiksektionen, THS, Porthos visa, KTH, Fysik">
+    <meta name="description" content="Den officiella, sökbara sångboken för Fysiksektionen vid THS innehåller både nya och gamla sånger för gasque och bankett.">
+    <meta name="author" content="F.com (Fysiksektionens Kommunikationsnämnd)">
+    <meta name="thumbnail" content="<%= BASE_URL %>thumbnail.png">
+
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
   </head>
   <body class="night">
     <noscript>
