Added touch action settings.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#ff6600">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=4, minimum-scale=1, width=device-width">
 
     <meta name="keywords" content="Teknisk Fysik, Sångbok, Fysiksektionen, THS, Porthos visa, KTH, Fysik">
     <meta name="description" content="Den officiella, sökbara sångboken för Fysiksektionen vid THS innehåller både nya och gamla sånger för gasque och bankett.">
