--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
     <meta name="thumbnail" content="<%= BASE_URL %>thumbnail.png">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" media="print" onload="if(media!='all')media='all'">
+    <link rel="preload" crossorigin="anonymous" href="https://fonts.gstatic.com/s/ebgaramond/v15/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2" as="font">
+    <link rel="preload" crossorigin="anonymous" href="https://fonts.gstatic.com/s/ebgaramond/v15/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkB49_S6w.woff2" as="font">
   </head>
   <body class="night">
     <noscript>
