--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,10 @@
     <meta name="description" content="Den officiella, sökbara sångboken för Fysiksektionen vid THS innehåller både nya och gamla sånger för gasque och bankett.">
     <meta name="author" content="F.com (Fysiksektionens Kommunikationsnämnd)">
     <meta name="thumbnail" content="<%= BASE_URL %>thumbnail.png">
-
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" media="print" onload="if(media!='all')media='all'">
-    <link rel="preload" crossorigin="anonymous" href="https://fonts.gstatic.com/s/ebgaramond/v15/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2" as="font">
-    <link rel="preload" crossorigin="anonymous" href="https://fonts.gstatic.com/s/ebgaramond/v15/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkB49_S6w.woff2" as="font">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   <body class="night">
     <noscript>
