--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
     <noscript>
       <strong>Konglig Fysiks Sångbok fungerar tyvärr bara med JavaScript.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      Din webbläsare tycks inte stödjas. Om du vill, kan du skapa en issue <a href="https://github.com/Fysiksektionen/sangbok-html/issues">här</a>.
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
