Sheet music now use absolute path.

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta name="keywords" content="Teknisk Fysik, Sångbok, Fysiksektionen, THS, Porthos visa, KTH, Fysik">
     <meta name="description" content="Den officiella, sökbara sångboken för Fysiksektionen vid THS innehåller både nya och gamla sånger för gasque och bankett.">
     <meta name="author" content="F.com (Fysiksektionens Kommunikationsnämnd)">
-    <meta name="thumbnail" content="<%= BASE_URL %>thumbnail.png">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="thumbnail" content="thumbnail.png">
+    <link rel="icon" href="favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
