Added PWA manifest.

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="author" content="F.com (Fysiksektionens Kommunikationsnämnd)">
     <meta name="thumbnail" content="thumbnail.png">
     <link rel="icon" href="favicon.ico">
+    <link rel="manifest" href="/sangbok/manifest.json">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
