--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <meta name="author" content="F.com (Fysiksektionens Kommunikationsnämnd)">
 
     <meta name="thumbnail" content="thumbnail.png">
-    <link rel="manifest" href="/sangbok/pwa/manifest.json">
+    <link rel="manifest" href="pwa/manifest.json">
     <meta name="apple-mobile-web-app-title" content="Sångboken">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="/pwa/thumbnail_maskable_192.png">
+    <link rel="apple-touch-icon" href="pwa/thumbnail_maskable_192.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
