--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,20 @@
     
     <title>Konglig Fysiks Sångbok</title>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="favicon.ico">
     <meta name="theme-color" content="#ff6600">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=4, minimum-scale=1, width=device-width">
 
     <meta name="keywords" content="Teknisk Fysik, Sångbok, Fysiksektionen, THS, Porthos visa, KTH, Fysik">
     <meta name="description" content="Den officiella, sökbara sångboken för Fysiksektionen vid THS innehåller både nya och gamla sånger för gasque och bankett.">
     <meta name="author" content="F.com (Fysiksektionens Kommunikationsnämnd)">
+
     <meta name="thumbnail" content="thumbnail.png">
-    <link rel="icon" href="favicon.ico">
-    <link rel="manifest" href="/sangbok/manifest.json">
+    <link rel="manifest" href="pwa/manifest.json">
+    <meta name="apple-mobile-web-app-title" content="Sångboken">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="pwa/thumbnail_maskable_192.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
