SW config changes.

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
       <strong>Konglig Fysiks Sångbok fungerar tyvärr bara med JavaScript.</strong>
     </noscript>
     <div id="app">
-      Din webbläsare tycks inte stödjas. Om du vill, kan du skapa en issue <a href="https://github.com/Fysiksektionen/sangbok-html/issues">här</a>.
+      Sångboken kunde inte laddas korrekt. Om du har en väldigt gammal webbläsare är detta föväntat.
+      Misstänker du att det är vårt fel får du gärna kontakta webmaster eller skapa ett issue <a href="https://github.com/Fysiksektionen/sangbok-html/issues">här</a>.
+      För att hjälpa oss felsöka får du gärna inkludera <code>__COMMIT__</code>-variabeln i konsolen (Ctrl-Shift-J) när du kontaktar oss.
+      Är det ett problem med service-workern eller caching, kan det ofta lösas genom att ladda om sidan (ordentligt, med Ctrl-F5), alternativt klicka <a href="sangbok/">här</a>, eller <a href="sangbok/sangbok">här</a>.
     </div>
     <!-- built files will be auto injected -->
   </body>
