Minor content fixes

--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,13 @@
       Misstänker du att det är vårt fel får du gärna kontakta webmaster eller skapa ett issue <a href="https://github.com/Fysiksektionen/sangbok-html/issues">här</a>.
       För att hjälpa oss felsöka får du gärna inkludera <code>__COMMIT__</code>-variabeln i konsolen (Ctrl-Shift-J) när du kontaktar oss.
       <br>
-      Förmodligen är detta problem orsakat av service workern (felaktig caching). Följande åtgärder kan åtgärda problemet:
+      Förmodligen är detta problem orsakat av service-workern. Följande åtgärder bör lösa problemet:
       <ul>
         <li>Komplett reload (Ctrl-F5)</li>
         <li>Öppna sidan i ett nytt privat fönster</li>
         <li>Starta om webbläsaren</li>
-        <li>Klicka <a href="sangbok/">här</a>, eller <a href="sangbok/sangbok">här</a></li>
+        <li>Stäng ner alla flikar på domänen <a href="https://f.kth.se">f.kth.se</a>, och öppna sångboken på nytt.</li>
+        <li>Om du använder sidan som app, se till att du inte har några sångboks-flikar öppna i din webbläsare.</li>
       </ul>
     </div>
     <!-- built files will be auto injected -->
