Added OpenSearch manifest (only tested in Firefox)

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="search" type="application/opensearchdescription+xml" title="Konglig Fysiks Sångbok" href="meta/opensearch.xml">
   </head>
   <body class="night">
     <noscript>
