Tooling upgrade (Vue CLI -> Vite)
Replaced dependency bloat with config bloat and thus keeping the bloat up-to-date. This is was done in order to make Vue 3.4 work properly.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="search" type="application/opensearchdescription+xml" title="Konglig Fysiks Sångbok" href="meta/opensearch.xml">
+    
+    <script type="module" src="/src/main.ts"></script>
   </head>
   <body class="night">
     <noscript>
@@ -29,17 +31,15 @@
     <div id="app">
       Sångboken kunde inte laddas korrekt. Om du har en väldigt gammal webbläsare är detta föväntat.
       Misstänker du att det är vårt fel får du gärna kontakta webmaster eller skapa ett issue <a href="https://github.com/Fysiksektionen/sangbok-html/issues">här</a>.
-      För att hjälpa oss felsöka får du gärna inkludera <code>__COMMIT__</code>-variabeln i konsolen (Ctrl-Shift-J) när du kontaktar oss.
       <br>
-      Förmodligen är detta problem orsakat av service-workern. Följande åtgärder bör lösa problemet:
+      Förmodligen är detta problem orsakat av service-workern (som inte används längre). Följande åtgärder bör lösa problemet:
       <ul>
         <li>Komplett reload (Ctrl-F5)</li>
         <li>Öppna sidan i ett nytt privat fönster</li>
         <li>Starta om webbläsaren</li>
         <li>Stäng ner alla flikar på domänen <a href="https://f.kth.se">f.kth.se</a>, och öppna sångboken på nytt.</li>
-        <li>Om du använder sidan som app, se till att du inte har några sångboks-flikar öppna i din webbläsare.</li>
+        <li>Om du använder sidan som pwa, se till att du inte har några sångboks-flikar öppna i din webbläsare.</li>
       </ul>
     </div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
